cluster/services/longhorn/route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: longhorn
spec:
  entryPoints:
    - https
  routes:
    - kind: Rule
      match: Host(`longhorn.${DOMAIN}`)
      services:
        - kind: Service
          name: longhorn-frontend
          namespace: longhorn
          port: 80
      middlewares:
        - name: auth
          namespace: traefik
        - name: security
          namespace: traefik
  tls:
    secretName: longhorn.${DOMAIN}
